--- a/package.json
+++ b/package.json
@@ -12,25 +12,34 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.1.3",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.1.3",
     "@angular/compiler": "~8.1.3",
     "@angular/core": "~8.1.3",
     "@angular/forms": "~8.1.3",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.1.3",
     "@angular/platform-browser-dynamic": "~8.1.3",
     "@angular/router": "~8.1.3",
+    "bootstrap": "^4.3.1",
+    "chart.js": "^2.5.0",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.5.0",
+    "ngx-bootstrap": "^5.6.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.3",
+    "@angular-devkit/build-angular": "^0.803.24",
     "@angular/cli": "~8.1.3",
     "@angular/compiler-cli": "~8.1.3",
     "@angular/language-service": "~8.1.3",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -42,6 +51,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "typescript": "^3.4.5"
   }
 }
